Made cookie secret auto gen on start

--- a/src/views/templates/error.ejs
+++ b/src/views/templates/error.ejs
@@ -6,6 +6,5 @@
   <% if (details) { %>
     <div class="info"><%= details %></div>
   <% } %>
-  <button onclick="window.history.back()" class="secondary-button">Go Back</button>
-  <button onclick="window.location.href='/'" class="mt-2">Home</button>
+  <a href="/" class="mt-2">Home</a>
 </div> 
